--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Keeper App</title>
+    <title>ScratchPad</title>
     <link font-family: "Montserrat", sans-serif;
     href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
     rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
-  	<link id="external-css" rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap" media="all">
-</head>
+    <link
+      id="external-css"
+      rel="stylesheet"
+      type="text/css"
+      href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"
+      media="all"
+    />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  </head>
 
   <body>
     <div id="root"></div>
